--- a/Mizuka-Typing-2.0/public/index.html
+++ b/Mizuka-Typing-2.0/public/index.html
@@ -13,9 +13,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="An elegant typing test website." />
+    <meta name="keywords" content="typing test, Mizuka Types, typing speed, online typing test, Muhammad Zahooruddin Nizamani, St. Bonaventure's High School" />
+    <meta name="author" content="Zahoor Nizamani" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Mizuka Types</title>
+    <title>Mizuka Types - Online Typing Test by Zahoor Nizamani</title>
   </head>
   <body>
     <noscript>A typing site inspired by Monkey Types and typing master</noscript>
